--- a/MyFirstColabNotebook.ipynb
+++ b/MyFirstColabNotebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "MyFirstColabNotebook.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNKWo+mZc7PQUq1+Ja1RjEf",
+      "authorship_tag": "ABX9TyO40K3yc4m7Tu7t9EhptYVO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -106,6 +106,273 @@
       },
       "source": [
         "$\\sqrt{3x-1}+(1+x)^2$"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SOAqsjW65VWe",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "511a166c-8afb-44c0-8e54-05591e12b812"
+      },
+      "source": [
+        "message = 'A Great Tutorial on Colab by Tutorialspoint!'\n",
+        "greeting = !echo -e '$message\\n$message'\n",
+        "greeting #a simple code cell that uses the system commmand 'echo'"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['A Great Tutorial on Colab by Tutorialspoint!',\n",
+              " 'A Great Tutorial on Colab by Tutorialspoint!']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V-c01SZJ5_-a",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "c10232d9-48b8-44bd-fe01-559a47c2cc8d"
+      },
+      "source": [
+        "!wget http://mlr.cs.umass.edu/ml/machine-learning-databases/adult/adult.data -P \"/content/drive/My Drive/app\"\n",
+        "#to load dataset from a remote server"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2020-07-04 03:40:52--  http://mlr.cs.umass.edu/ml/machine-learning-databases/adult/adult.data\n",
+            "Resolving mlr.cs.umass.edu (mlr.cs.umass.edu)... 128.119.246.96\n",
+            "Connecting to mlr.cs.umass.edu (mlr.cs.umass.edu)|128.119.246.96|:80... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 3974305 (3.8M) [text/plain]\n",
+            "Saving to: ‘/content/drive/My Drive/app/adult.data’\n",
+            "\n",
+            "adult.data          100%[===================>]   3.79M  4.93MB/s    in 0.8s    \n",
+            "\n",
+            "2020-07-04 03:40:53 (4.93 MB/s) - ‘/content/drive/My Drive/app/adult.data’ saved [3974305/3974305]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ujzgv-m86cTI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "19df9e72-5847-41e7-f218-2fbb23ffe554"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "data = pd.read_csv(\"/content/drive/My Drive/app/adult.data\")\n",
+        "data.head(5)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>39</th>\n",
+              "      <th>State-gov</th>\n",
+              "      <th>77516</th>\n",
+              "      <th>Bachelors</th>\n",
+              "      <th>13</th>\n",
+              "      <th>Never-married</th>\n",
+              "      <th>Adm-clerical</th>\n",
+              "      <th>Not-in-family</th>\n",
+              "      <th>White</th>\n",
+              "      <th>Male</th>\n",
+              "      <th>2174</th>\n",
+              "      <th>0</th>\n",
+              "      <th>40</th>\n",
+              "      <th>United-States</th>\n",
+              "      <th>&lt;=50K</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>50</td>\n",
+              "      <td>Self-emp-not-inc</td>\n",
+              "      <td>83311</td>\n",
+              "      <td>Bachelors</td>\n",
+              "      <td>13</td>\n",
+              "      <td>Married-civ-spouse</td>\n",
+              "      <td>Exec-managerial</td>\n",
+              "      <td>Husband</td>\n",
+              "      <td>White</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>13</td>\n",
+              "      <td>United-States</td>\n",
+              "      <td>&lt;=50K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>38</td>\n",
+              "      <td>Private</td>\n",
+              "      <td>215646</td>\n",
+              "      <td>HS-grad</td>\n",
+              "      <td>9</td>\n",
+              "      <td>Divorced</td>\n",
+              "      <td>Handlers-cleaners</td>\n",
+              "      <td>Not-in-family</td>\n",
+              "      <td>White</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>40</td>\n",
+              "      <td>United-States</td>\n",
+              "      <td>&lt;=50K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>53</td>\n",
+              "      <td>Private</td>\n",
+              "      <td>234721</td>\n",
+              "      <td>11th</td>\n",
+              "      <td>7</td>\n",
+              "      <td>Married-civ-spouse</td>\n",
+              "      <td>Handlers-cleaners</td>\n",
+              "      <td>Husband</td>\n",
+              "      <td>Black</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>40</td>\n",
+              "      <td>United-States</td>\n",
+              "      <td>&lt;=50K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>28</td>\n",
+              "      <td>Private</td>\n",
+              "      <td>338409</td>\n",
+              "      <td>Bachelors</td>\n",
+              "      <td>13</td>\n",
+              "      <td>Married-civ-spouse</td>\n",
+              "      <td>Prof-specialty</td>\n",
+              "      <td>Wife</td>\n",
+              "      <td>Black</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>40</td>\n",
+              "      <td>Cuba</td>\n",
+              "      <td>&lt;=50K</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>37</td>\n",
+              "      <td>Private</td>\n",
+              "      <td>284582</td>\n",
+              "      <td>Masters</td>\n",
+              "      <td>14</td>\n",
+              "      <td>Married-civ-spouse</td>\n",
+              "      <td>Exec-managerial</td>\n",
+              "      <td>Wife</td>\n",
+              "      <td>White</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>40</td>\n",
+              "      <td>United-States</td>\n",
+              "      <td>&lt;=50K</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   39          State-gov   77516   Bachelors  ...   0  40   United-States   <=50K\n",
+              "0  50   Self-emp-not-inc   83311   Bachelors  ...   0  13   United-States   <=50K\n",
+              "1  38            Private  215646     HS-grad  ...   0  40   United-States   <=50K\n",
+              "2  53            Private  234721        11th  ...   0  40   United-States   <=50K\n",
+              "3  28            Private  338409   Bachelors  ...   0  40            Cuba   <=50K\n",
+              "4  37            Private  284582     Masters  ...   0  40   United-States   <=50K\n",
+              "\n",
+              "[5 rows x 15 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "arggGJmW6usM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "2e166408-1f35-4124-f7a7-0340e33bb433"
+      },
+      "source": [
+        "!git clone https://github.com/wxs/keras-mnist-tutorial.git #clone the keras tutorial on github"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'keras-mnist-tutorial'...\n",
+            "remote: Enumerating objects: 26, done.\u001b[K\n",
+            "remote: Total 26 (delta 0), reused 0 (delta 0), pack-reused 26\u001b[K\n",
+            "Unpacking objects: 100% (26/26), done.\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
