--- a/MyFirstColabNotebook.ipynb
+++ b/MyFirstColabNotebook.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1aMp9oUN8HmBp0hVsWJKxx6khFZIpZluo",
-      "authorship_tag": "ABX9TyOjktMvDT9qwMpFCVTf6aqB",
+      "authorship_tag": "ABX9TyNmpIaUhpBeGoDy4uKkG80w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -985,6 +985,41 @@
       "cell_type": "code",
       "metadata": {
         "id": "qnLswehvJjV8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "b3014ce6-0b0d-4cb8-b8c2-d5f6ed07d37f"
+      },
+      "source": [
+        "#@title String fields\n",
+        "\n",
+        "text = 'value' #@param {type:\"string\"}\n",
+        "dropdown = '1st option' #@param [\"1st option\", \"2nd option\", \"3rd option\"]\n",
+        "text_and_dropdown = 'value' #@param [\"1st option\", \"2nd option\", \"3rd option\"] {allow-input: true}\n",
+        "\n",
+        "print(text)\n",
+        "print(dropdown)\n",
+        "print(text_and_dropdown)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "value\n",
+            "1st option\n",
+            "value\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7AjS-PuzZBbU",
         "colab_type": "code",
         "colab": {}
       },
